--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "cloudinary-react": "^1.5.1",
     "emailjs-com": "^2.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -34,6 +37,7 @@
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-pwa-manifest": "^4.2.0"
   }
 }
