--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --open --mode development"
+    "build": "webpack -p",
+    "dev": "webpack-dev-server --open --mode development",
+    "start": "http-server docs"
   },
   "keywords": [],
   "author": "",
@@ -23,21 +24,25 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
-    "react-transition-group": "^4.4.1",
-    "workbox-webpack-plugin": "^5.1.3"
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.12.3",
     "mini-css-extract-plugin": "^0.9.0",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "webpack-pwa-manifest": "^4.2.0"
+    "webpack-pwa-manifest": "^4.2.0",
+    "workbox-webpack-plugin": "^5.1.3"
   }
 }
