--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
-    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
@@ -37,9 +36,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-pwa-manifest": "^4.2.0",
